# python-starting-project

./: README.md  pyproject.toml  requirements.txt
src/strings/: overview_strings.py  practice_strings.py
tests/: test_core.py
