[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-starting-project"
version = "0.1.0"
description = "A minimal starter Python project."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

#[project.scripts]
#python-starting-project = "python_starting_project.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
